--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by Mahajan Kapil</title>
+  <title>Anusmita – A Special Wish Just for You</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -18,13 +18,25 @@ Instagram: https://www.instagram.com/college_wishlist
 
 
 -->
+<div class="career-message">
+    <p style="color: red;">Dear Anusmita,</p>
+    <p>
+      As you prepare for the NEET exam, remember that every moment you spend studying is bringing you closer to a life of purpose and compassion. Your hard work, perseverance, and commitment are inspiring! This journey is tough, but so are you, and each challenge is shaping you into an extraordinary healer who will touch countless lives. Believe in your dreams and trust in your strength.
+    </p>
+    <p>
+      You have everything it takes to succeed. Keep pushing forward, and know that your efforts will bring you to a brighter tomorrow. Best of luck, future doctor – your journey has just begun, and we’re all so proud of you!
+    </p>
+</div>
+
+
+
 
 <div class="carousel">
     <div class="carousel-item">
         <div class="carousel-box">
             <div class="title">Hi 👋</div>
             <div class="num">01</div>
-			<img src="https://iili.io/2C06ebn.jpg" />
+			<img src="assets/img1.jpg" />
         </div>
     </div>
 
@@ -32,7 +44,7 @@ Instagram: https://www.instagram.com/college_wishlist
         <div class="carousel-box">
             <div class="title">I want to tell you Something 😍</div>
             <div class="num">02</div>
-			<img src="https://iili.io/2C06vxs.jpg" />
+			<img src="assets/img2.jpg" />
         </div>
     </div>
 
@@ -40,7 +52,7 @@ Instagram: https://www.instagram.com/college_wishlist
         <div class="carousel-box">
             <div class="title">Please Keep Dragging 😊 </div>
             <div class="num">03</div>
-			<img src="https://iili.io/2C06OOX.jpg" />
+			<img src="assets/img3.jpg" />
         </div>
     </div>
 
@@ -48,7 +60,7 @@ Instagram: https://www.instagram.com/college_wishlist
 		<div class="carousel-box">
 			<div class="title">You are Amazing 🤩 </div>
 			<div class="num">04</div>
-			<img src="https://iili.io/2C064g2.jpg" />
+			<img src="assets/img4.jpg" />
         </div>
 	</div>
 
@@ -56,7 +68,7 @@ Instagram: https://www.instagram.com/college_wishlist
 		<div class="carousel-box">
 			<div class="title">Most Beautiful Person on Earth 💯</div>
 			<div class="num">05</div>
-			<img src="https://iili.io/2C06mqx.jpg" />
+			<img src="assets/img5.jpg" />
         </div>
 	</div>
 
@@ -64,7 +76,7 @@ Instagram: https://www.instagram.com/college_wishlist
 		<div class="carousel-box">
 			<div class="title">And Cutest 🎀</div>
 			<div class="num">06</div>
-			<img src="https://iili.io/2nKCPfa.jpg" />
+			<img src="assets/img6.jpg" />
         </div>
 	</div>
 
@@ -72,7 +84,7 @@ Instagram: https://www.instagram.com/college_wishlist
 		<div class="carousel-box">
 			<div class="title">And Since i met You 😗 </div>
 			<div class="num">07</div>
-			<img src="https://iili.io/2C06Dsj.jpg" />
+			<img src="assets/img7.jpg" />
         </div>
 	</div>
 
@@ -80,7 +92,7 @@ Instagram: https://www.instagram.com/college_wishlist
 		<div class="carousel-box">
 			<div class="title">I feel very Lucky Everyday 😇</div>
 			<div class="num">08</div>
-			<img src="https://iili.io/2C06tWb.jpg" />
+			<img src="assets/img8.jpg" />
         </div>
 	</div>
 
@@ -88,27 +100,27 @@ Instagram: https://www.instagram.com/college_wishlist
 		<div class="carousel-box">
 			<div class="title">and I have Crush on You 🥰</div>
 			<div class="num">09</div>
-			<img src="https://iili.io/2C06Zzu.jpg" />
+			<img src="assets/img9.jpg" />
         </div>
 	</div>
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">I love You ❤️</div>
+            <div class="title">Happy Belated Birthday 🎉</div>
 			<div class="num">10</div>
-			<img src="https://iili.io/2C06Dsj.jpg" />
+			<img src="assets/img10.jpg" />
         </div>
 	</div>
 </div>
 
 
 
-<a href="https://www.instagram.com/college_wishlist" target="_blank" class="logo">C</a>
+<a href="https://www.instagram.com/___.dibyaranjan/profilecard/?igsh=MXhpNTJ6NDcybmJ0bg==" target="_blank" class="logo">C</a>
 <div class="social">
   <a href="#" target="_blank"
 		><svg>
 			<use xlink:href="#ico-linkedin"></use></svg
 	></a>
-	<a href="https://www.instagram.com/college_wishlist" target="_blank"
+	<a href="https://www.instagram.com/___.dibyaranjan/profilecard/?igsh=MXhpNTJ6NDcybmJ0bg==" target="_blank"
 		><svg>
 			<use xlink:href="#ico-instagram"></use></svg
 ></a>
@@ -142,9 +154,18 @@ Instagram: https://www.instagram.com/college_wishlist
 <div class="cursor cursor2"></div>
 <!-- partial -->
   <script  src="./script.js"></script>
+     
+ 
+  
 
+
+  <div class="footer">
+    <p>Made with ❤️ by software engineer Dibya</p>
+  </div>
+  
 </body>
 <!-- partial -->
+ 
   <script  src="./script.js"></script>
 
 </body>
