--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Anusmita – A Special Wish Just for You</title>
+  <title>KARISHMA – A Special attachment is Just for You</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -19,12 +19,11 @@ Instagram: https://www.instagram.com/college_wishlist
 
 -->
 <div class="career-message">
-    <p style="color: red;">Dear Anusmita,</p>
+    <p style="color: red;">DEAR KARISHMA...</p>
     <p>
-      As you prepare for the NEET exam, remember that every moment you spend studying is bringing you closer to a life of purpose and compassion. Your hard work, perseverance, and commitment are inspiring! This journey is tough, but so are you, and each challenge is shaping you into an extraordinary healer who will touch countless lives. Believe in your dreams and trust in your strength.
-    </p>
+		"With you, every moment feels like a beautiful promise of tomorrow."
     <p>
-      You have everything it takes to succeed. Keep pushing forward, and know that your efforts will bring you to a brighter tomorrow. Best of luck, future doctor – your journey has just begun, and we’re all so proud of you!
+      You have everything it takes to succeed. Keep pushing forward, and know that your efforts will bring you to a brighter tomorrow. Best of luck, and we’re all so proud of you!
     </p>
 </div>
 
@@ -105,7 +104,7 @@ Instagram: https://www.instagram.com/college_wishlist
 	</div>
 	<div class="carousel-item">
 		<div class="carousel-box">
-            <div class="title">Happy Belated Birthday 🎉</div>
+            <div class="title"></div>
 			<div class="num">10</div>
 			<img src="assets/img10.jpg" />
         </div>
@@ -114,13 +113,13 @@ Instagram: https://www.instagram.com/college_wishlist
 
 
 
-<a href="https://www.instagram.com/___.dibyaranjan/profilecard/?igsh=MXhpNTJ6NDcybmJ0bg==" target="_blank" class="logo">C</a>
+<a href="https://www.instagram.com/_.debraj_07/profilecard/?igsh=dDc0YWdmZDZqd3pv" target="_blank" class="logo">C</a>
 <div class="social">
   <a href="#" target="_blank"
 		><svg>
 			<use xlink:href="#ico-linkedin"></use></svg
 	></a>
-	<a href="https://www.instagram.com/___.dibyaranjan/profilecard/?igsh=MXhpNTJ6NDcybmJ0bg==" target="_blank"
+	<a href="https://www.instagram.com/_.debraj_07/profilecard/?igsh=dDc0YWdmZDZqd3pv" target="_blank"
 		><svg>
 			<use xlink:href="#ico-instagram"></use></svg
 ></a>
@@ -160,7 +159,7 @@ Instagram: https://www.instagram.com/college_wishlist
 
 
   <div class="footer">
-    <p>Made with ❤️ by software engineer Dibya</p>
+    <h2>MADE WITH ❤️ BY SOFTWARE ENGINEER DEBRAJ</h1>
   </div>
   
 </body>
