--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>KARISHMA – A Special attachment is Just for You</title>
+  <title>KARISHMA – A GIFT FROM THE HEART ❤</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -19,12 +19,10 @@ Instagram: https://www.instagram.com/college_wishlist
 
 -->
 <div class="career-message">
-    <p style="color: red;">DEAR KARISHMA...</p>
-    <p>
-		"With you, every moment feels like a beautiful promise of tomorrow."
-    <p>
-      You have everything it takes to succeed. Keep pushing forward, and know that your efforts will bring you to a brighter tomorrow. Best of luck, and we’re all so proud of you!
-    </p>
+    <p style="color: red;"><b>DEAR KARISHMA..❤️.</b></p>
+    <p style = "color: red;">
+		<b>"IN A WORLD OF POSSIBILITIES, YOU'RE MY IMPOSSIBLE DREAM.❤️."</b>
+	</p>  
 </div>
 
 
@@ -65,7 +63,7 @@ Instagram: https://www.instagram.com/college_wishlist
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<div class="title">Most Beautiful Person on Earth 💯</div>
+			<div class="title">Most Beautiful Person for me 💯</div>
 			<div class="num">05</div>
 			<img src="assets/img5.jpg" />
         </div>
@@ -104,7 +102,7 @@ Instagram: https://www.instagram.com/college_wishlist
 	</div>
 	<div class="carousel-item">
 		<div class="carousel-box">
-            <div class="title"></div>
+            <div class="title" style = "color:red;">I LOVE YOU ❤️ </div>
 			<div class="num">10</div>
 			<img src="assets/img10.jpg" />
         </div>
@@ -113,13 +111,13 @@ Instagram: https://www.instagram.com/college_wishlist
 
 
 
-<a href="https://www.instagram.com/_.debraj_07/profilecard/?igsh=dDc0YWdmZDZqd3pv" target="_blank" class="logo">C</a>
+<a href="https://www.instagram.com/___.debraj_07/profilecard/?igsh=dDc0YWdmZDZqd3pv==" target="_blank" class="logo">logo</a>
 <div class="social">
   <a href="#" target="_blank"
 		><svg>
 			<use xlink:href="#ico-linkedin"></use></svg
 	></a>
-	<a href="https://www.instagram.com/_.debraj_07/profilecard/?igsh=dDc0YWdmZDZqd3pv" target="_blank"
+	<a href="https://www.instagram.com/___.debraj_07/profilecard/?igsh=dDc0YWdmZDZqd3pv==" target="_blank"
 		><svg>
 			<use xlink:href="#ico-instagram"></use></svg
 ></a>
